# CAFA6-Solution

./: .gitignore  Dockerfile  README.md  create_embeddings.sh  predict_ensemble.sh  pyproject.toml  train_models.sh
src/cafa/core/: cli.py  constants.py  datamodule.py  eval_metrics.py  metrics.py  model.py  utils.py
src/cafa/core/common/: logging.json  logging.py  utils.py
src/cafa/experiments/embedding_nn/: datamodule.py  dataset.py  fit_config.yaml  model.py  predict_config.yaml
src/cafa/experiments/sequence_embedder/: datamodule.py  dataset.py  esm2_config.yaml  model.py  prost_t5_config.yaml
src/cafa/scripts/: cli.py  create_protein_pubmed_embeddings.py  ensemble_predictions.py  generate_pubmed_embeddings.py
